// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Chip DefaultGreen smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_forest__9K8Pw Chip_chip_medium__etsgc ">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip DefaultGrey smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_graphite__ldLQ9 Chip_chip_medium__etsgc ">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip DefaultRed smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_burgundy__lnskp Chip_chip_medium__etsgc ">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip DefaultYellow smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_ochre__6nG8s Chip_chip_medium__etsgc ">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip Small smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_ochre__6nG8s Chip_chip_small__mtn+q ">
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="en"
       data-testid="123ID"
       class="Chip_chip__L45zR Chip_chip_ochre__6nG8s Chip_chip_medium__etsgc dummyClassname"
  >
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_burgundy__lnskp Chip_chip_medium__etsgc ">
    <div class="Chip_iconWrapper__KjHgM"
         aria-hidden="true"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz Chip_icon__H5mBf"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
    </div>
    Særavgift
  </div>
</div>
`;

exports[`Tester/Chip WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="Chip_chip__L45zR Chip_chip_ochre__6nG8s Chip_chip_medium__etsgc "
       id="dummyIdForwardedFromRef"
  >
    Særavgift
  </div>
</div>
`;
